2014-07-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/59637
	* g++.dg/cpp0x/decltype60.C: New.

2014-07-01  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/simd/vcage_f64.c: New test.
	* gcc.target/aarch64/simd/vcagt_f64.c: Likewise.
	* gcc.target/aarch64/simd/vcale_f64.c: Likewise.
	* gcc.target/aarch64/simd/vcaled_f64.c: Likewise.
	* gcc.target/aarch64/simd/vcales_f32.c: Likewise.
	* gcc.target/aarch64/simd/vcalt_f64.c: Likewise.
	* gcc.target/aarch64/simd/vcaltd_f64.c: Likewise.
	* gcc.target/aarch64/simd/vcalts_f32.c: Likewise.

2014-07-01  Paolo Carlini  <paolo.carlini@oracle.com>

	* g++.dg/cpp1y/pr59867.C: Fix target selector.

2014-07-01  Marek Polacek  <polacek@redhat.com>

	* gcc.dg/Wint-conversion.c: New test.

2014-07-01  Marek Polacek  <polacek@redhat.com>

	PR c/58286
	* gcc.dg/Wincompatible-pointer-types.c: New test.

2014-06-30  David Holsgrove <david.holsgrove@xilinx.com>

	* gcc/testsuite/lib/scanasm.exp (dg-function-on-line): Add
	MicroBlaze specific pattern.

2014-06-30  Edward Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/58781
	PR c++/60249
	PR c++/59867
	* testsuite/g++.dg/cpp0x/pr58781.C: New.
	* testsuite/g++.dg/cpp0x/pr60249.C: New.
	* testsuite/g++.dg/cpp1y/pr59867.C: New.

2014-06-30  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gfortran.dg/round_4.f90: Skip for powerpc*-*-linux* since the
	test requires greater precision than the current PowerPC long
	double implementation supports.

2014-06-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54891
	* g++.dg/cpp0x/lambda/lambda-cast1.C: New.

2014-06-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51400
	* g++.dg/cpp0x/constexpr-attribute3.C: New.

2014-06-30  Jeff Law  <law@redhat.com>

	PR tree-optimization/61607
	* gcc.dg/tree-ssa/pr61607.c: New test.

2014-06-30  Marek Polacek  <polacek@redhat.com>

	* c-c++-common/ubsan/attrib-2.c: New test.
	* g++.dg/ubsan/return-3.C: New test.

2014-06-30  Igor Zamyatin  <igor.zamyatin@intel.com>
